# Software-deprecated

./: .gitignore  CMakeLists.txt  README.md
Code/: CIAA_v1_0.pro  CMakeLists.txt  ciaa_comm_drivers_config.h  main.cpp
Code/CMake/: CMakeDependencies.cmake
Code/Coder/: CMakeLists.txt  ciaaProject.cpp  ciaaProject.h
Code/Coder/IEC61131Standard/: ciaaIECBaseElement.cpp  ciaaIECBaseElement.h
Code/Coder/IEC61131Standard/Blocks/: ciaaIECBaseBlock.cpp  ciaaIECBaseBlock.h
Code/Coder/IEC61131Standard/DataTypes/: ciaaIECBoolType.cpp  ciaaIECBoolType.h  ciaaIECByteType.cpp  ciaaIECByteType.h  ciaaIECDBaseType.cpp  ciaaIECDBaseType.h  ciaaIECDIntType.cpp  ciaaIECDIntType.h  ciaaIECDWordType.cpp  ciaaIECDWordType.h  ciaaIECWordType.cpp  ciaaIECWordType.h
Code/Coder/IEC61131Standard/Operators/: ciaaIECAdd.cpp  ciaaIECAdd.h  ciaaIECAnd.cpp  ciaaIECAnd.h  ciaaIECBBinaryOperator.cpp  ciaaIECBBinaryOperator.h  ciaaIECBUnaryOperator.cpp  ciaaIECBUnaryOperator.h  ciaaIECOr.cpp  ciaaIECOr.h
Code/Coder/IEC61131Standard/Projects/: ciaaIECProject.cpp  ciaaIECProject.h
Code/Coder/IEC61131Standard/Variables/: ciaaIECArrays.cpp  ciaaIECArrays.h  ciaaIECAttributes.cpp  ciaaIECAttributes.h  ciaaIECStructures.cpp  ciaaIECStructures.h  ciaaIECVariable.cpp  ciaaIECVariable.h
Code/Coder/IL/Elements/: ciaaILRegister.cpp  ciaaILRegister.h
Code/Coder/IL/Operators/: ciaaILAnd.cpp  ciaaILAnd.h
Code/Coder/IL/Visualiser/: ciaaVIL_Controller.cpp  ciaaVIL_Controller.h  ciaaVIL_Model.cpp  ciaaVIL_Model.h  ciaaVIL_View.cpp  ciaaVIL_View.h
Code/Coder/Ladder/Elements/: ciaaLCoil_Controller.cpp  ciaaLCoil_Controller.h  ciaaLCoil_Model.cpp  ciaaLCoil_Model.h  ciaaLCoil_View.cpp  ciaaLCoil_View.h  ciaaLContact_Controller.cpp  ciaaLContact_Controller.h  ciaaLContact_Model.cpp  ciaaLContact_Model.h  ciaaLContact_View.cpp  ciaaLContact_View.h  ciaaLElement_Controller.cpp  ciaaLElement_Controller.h  ciaaLElement_Model.cpp  ciaaLElement_Model.h  ciaaLElement_View.cpp  ciaaLElement_View.h  ciaaLF.cpp  ciaaLF.h  ciaaLFB.cpp  ciaaLFB.h  ciaaLInput_Controller.cpp  ciaaLInput_Controller.h  ciaaLInput_Model.cpp  ciaaLInput_Model.h  ciaaLInput_View.cpp  ciaaLInput_View.h  ciaaLOutput_Controller.cpp  ciaaLOutput_Controller.h  ciaaLOutput_Model.cpp  ciaaLOutput_Model.h  ciaaLOutput_View.cpp  ciaaLOutput_View.h  ciaaLProgram.cpp  ciaaLProgram.h
Code/Coder/Ladder/Operators/: ciaaLAnd.cpp  ciaaLAnd.h
Code/Coder/Ladder/Visualiser/: ciaaVLadder_Controller.cpp  ciaaVLadder_Controller.h  ciaaVLadder_Model.cpp  ciaaVLadder_Model.h  ciaaVLadder_View.cpp  ciaaVLadder_View.h
Code/Comms/: CMakeLists.txt
Code/Comms/Drivers/: CMakeLists.txt  ciaaCommInterface.cpp  ciaaCommInterface.h  ciaa_comm_adapter_interface.h  ciaa_comm_driver_error_code.h  ciaa_comm_facade.cc  ciaa_comm_facade.h  ciaa_comm_interface.h  ciaa_drivers_adapter_interface.h  ciaa_drivers_error_code.h  ciaa_drivers_facade.cc  ciaa_drivers_facade.h  ciaa_drivers_interface.h  ciaa_drivers_ioservice_adapter.cc  ciaa_drivers_ioservice_adapter.h  ciaa_drivers_qiodevice_adapter.cc  ciaa_drivers_qiodevice_adapter.h  ciaa_ioservice_adapter.cc  ciaa_ioservice_adapter.h  ciaa_qiodevice_adapter.cc  ciaa_qiodevice_adapter.h
Code/Comms/Drivers/CMake/: CMakeDependencies.cmake  ciaa_comm_drivers_config.h.in
Code/Comms/Drivers/Ethernet/: ciaaSocket.cpp  ciaaSocket.h  ciaa_boosttcp_adapter.cc  ciaa_boosttcp_adapter.h  ciaa_drivers_basockettcp_adapter.cc  ciaa_drivers_basockettcp_adapter.h  ciaa_drivers_qsockettcp_adapter.cc  ciaa_drivers_qsockettcp_adapter.h  ciaa_drivers_qsocketudp_adapter.cc  ciaa_drivers_qsocketudp_adapter.h  ciaa_drivers_socket_tcp.cc  ciaa_drivers_socket_tcp.h  ciaa_drivers_socket_udp.cc  ciaa_drivers_socket_udp.h  ciaa_qtcpsocket_adapter.cc  ciaa_qtcpsocket_adapter.h  ciaa_qudpsocket_adapter.cc  ciaa_qudpsocket_adapter.h  ciaa_socket_tcp.cc  ciaa_socket_tcp.h  ciaa_socket_udp.cc  ciaa_socket_udp.h
Code/Comms/Drivers/SerialPort/: ciaaSerialPort.cpp  ciaaSerialPort.h  ciaa_boostserialport_adapter.cc  ciaa_boostserialport_adapter.h  ciaa_comm_drivers_serial_config.h  ciaa_drivers_baserialport_adapter.cc  ciaa_drivers_baserialport_adapter.h  ciaa_drivers_qserialport_adapter.cc  ciaa_drivers_qserialport_adapter.h  ciaa_drivers_serial_config.h  ciaa_drivers_serial_port.cc  ciaa_drivers_serial_port.h  ciaa_qserialport_adapter.cc  ciaa_qserialport_adapter.h  ciaa_serial_port.cc  ciaa_serial_port.h
Code/Comms/Protocols/: CMakeLists.txt
Code/Comms/Protocols/Modbus/: CMakeLists.txt  ciaaModbus.cpp  ciaaModbus.h
Code/Compiler/: CMakeLists.txt  ciaaIECCompiler.cpp  ciaaIECCompiler.h
Code/Compiler/IEC61131Standard/: CMakeLists.txt
Code/Compiler/IEC61131Standard/Common/: ciaa_compiler_common_elements.cc  ciaa_compiler_common_elements.h  ciaa_compiler_configuration_elements.cc  ciaa_compiler_configuration_elements.h  ciaa_compiler_constants.cc  ciaa_compiler_constants.h  ciaa_compiler_data_types.cc  ciaa_compiler_data_types.h  ciaa_compiler_declaration_initialization.cc  ciaa_compiler_declaration_initialization.h  ciaa_compiler_pou.cc  (+7 more)
Code/Compiler/IL/: CMakeLists.txt
Code/Debugger/: CMakeLists.txt  ciaaDebugger.cpp  ciaaDebugger.h
Code/Defines/: ciaaGlobalMacros.h  ciaa_modules_config.h
Code/GUI/: CMakeLists.txt
Code/GUI/MainWindow/: ciaaMainWindow_Controller.h  ciaaMainwindow_Controller.cpp  ciaaMainwindow_View.ui
Code/Programmer/: CMakeLists.txt  ciaaProgrammer.cpp  ciaaProgrammer.h
Code/Resources/: AppIcon.qrc  LadderIcons.qrc  StartIcons.qrc
Code/System/: CMakeLists.txt
Code/System/Base/: ciaaBaseMapMemory.cpp  ciaaBaseMapMemory.h
Code/System/ciaaFreescale/: ciaaFSMapMemory.cpp  ciaaFSMapMemory.h
Code/System/ciaaNXP/: ciaaNXPMapMemory.cpp  ciaaNXPMapMemory.h
Code/System/ciaaST/: ciaaSTMapMemory.cpp  ciaaSTMapMemory.h
Doc/: Doxfile  (+2 more)
Tests/Comms/Drivers/: CMakeLists.txt  async_tcp_test.cc  boost_test.cc  comms_drivers_master_test.cc  comms_drivers_master_test.h  runtests.cmake  serial_port_tests.cc  tcp_test.cc
Tests/Compiler/IEC61131Standard/: CMakeLists.txt
Tests/Compiler/IL/: CMakeLists.txt  test_compiler_il_lexer.cc
(+139 files in other folders)
